--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -1,11 +1,11 @@
 <h2>{{config.title}}</h2>
-<div>{{config.description}}</div>
-<div style="display: flex">
+<div class = "description" [innerHTML]="config.description"></div>
+<div *ngIf="allTestsPass()" class="next" (click)="state.nextExercise()">
+  {{config.messageNext || 'Good job! Go to the next exercise!'}}
+</div>
+<div style="display: flex" *ngIf="config?.editedFiles?.length">
   <app-editors [files]="config.editedFiles" (onCodeChange)="onCodeChange($event)"></app-editors>
   <div class="side">
-    <div *ngIf="allTestsPass()" class = "next" (click)="state.nextExercise()">
-      Good job! Go to the next exercise!
-    </div>
     <app-tests [tests]="config.tests"></app-tests>
     <app-runner [files]="config.editedFiles" style="flex: 50%"></app-runner>
   </div>
