--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -1,9 +1,7 @@
-<div style="display: flex;flex-direction: column">
-  <div *ngFor="let file of files">
-    <div *ngIf="!file.hidden">
-      <div class="filename">{{file.filename}} {{file.readonly?' (this file is read only) ': ''}}</div>
-      <app-editor [file]="file" (onCodeChange)="onCodeChange.emit({file: file, code: $event})" style="flex: 50%">
-      </app-editor>
-    </div>
+<div class="editors">
+  <div *ngFor="let file of visibleFiles" class="editor">
+    <div class="filename">{{file.filename}} {{file.readonly?' (this file is read only) ': ''}}</div>
+    <app-editor [file]="file" (onCodeChange)="onCodeChange.emit({file: file, code: $event})">
+    </app-editor>
   </div>
 </div>
