Clean up the first milestone

--- a/src/app/exercise/exercise.component.css
+++ b/src/app/exercise/exercise.component.css
@@ -11,12 +11,14 @@
 
 .description {
   max-width: 500px;
+  padding: 0 0 10px 0;
 }
 
 app-editors {
   width: 500px;
   display: flex;
 }
+
 .side {
   flex: 1;
 }
