--- a/src/app/exercise/exercise.component.css
+++ b/src/app/exercise/exercise.component.css
@@ -5,8 +5,20 @@
 .next {
   color: #fff;
   background: #3e8e01;
-  padding: 10px;
+  display: inline-block;
   cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+  border-radius: 3px;
+  margin: 1em;
+  line-height: 25px;
+  padding: 6px;
+  white-space: nowrap;
+  text-align: center;
+  text-decoration: none;
+}
+
+.main.description {
+  padding: 10px;
 }
 
 .description {
@@ -21,4 +33,12 @@ app-editors {
 
 .side {
   flex: 1;
+  display: flex;
+  background-color: #dddddd;
+  flex-direction: column;
+}
+
+.exercise-panel {
+  display: flex;
+  height: 100%;
 }
