--- a/src/app/milestone/milestone.component.html
+++ b/src/app/milestone/milestone.component.html
@@ -1,5 +1,7 @@
 <div class="exercises">
+  <div class="codelab-title exercise">{{name}}</div>
   <div class="milestone-title exercise">{{config.name}}</div>
+
   <div *ngFor="let item of config.exercises; let i = index"
        class="exercise {{config.selectedExerciseIndex === i ? 'selected' : ''}} {{exerciseComplete(item) ? 'complete' : ''}}"
        (click)="state.selectExercise(i)"
