Styling Clean up state operations

--- a/src/app/editors/editors.component.css
+++ b/src/app/editors/editors.component.css
@@ -1,17 +1,12 @@
 .editors {
-  display: flex;
-  flex-direction: column;
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
 
 .editor {
-  flex: 1;
-  display: flex;
   width: 100%;
-  flex-direction: column;
 }
 
 app-editor {
-  flex: 1
 }
