--- a/src/app/exercise/exercise.component.css
+++ b/src/app/exercise/exercise.component.css
@@ -1,6 +1,3 @@
-.side {
-  padding: 10px;
-}
 
 .next {
   color: #fff;
@@ -18,7 +15,13 @@
 }
 
 .main.description {
+  width: 800px;
+  margin: 0 auto;
   padding: 10px;
+}
+
+.description p {
+  margin-top: 0;
 }
 
 .description {
@@ -32,9 +35,9 @@ app-editors {
 }
 
 .side {
+  padding: 10px 20px;
   flex: 1;
   display: flex;
-  background-color: #dddddd;
   flex-direction: column;
 }
 
