--- a/src/app/feedback-widget/feedback-widget.component.html
+++ b/src/app/feedback-widget/feedback-widget.component.html
@@ -1,4 +1,4 @@
 <h2>Give us some feedback!</h2>
-<input type="text" #usernameInput placeholder="Enter your name" required/>  <br>
-<textarea #feedbackInput placeholder="Describe your issue or share your ideas" required></textarea> <br>
-<button class="btn" (click)="send(feedbackInput.value, usernameInput.value)">Send</button>
+<div><input type="text" #usernameInput placeholder="Enter your name" required/></div>
+<div><textarea #feedbackInput placeholder="Describe your issue or share your ideas" required></textarea> </div>
+<div><button (click)="send(feedbackInput.value, usernameInput.value)">Send</button></div>
