Add feedback page

--- a/src/app/codelab/codelab.component.html
+++ b/src/app/codelab/codelab.component.html
@@ -12,9 +12,24 @@
         <div class="index">{{i + 1}}</div>
         <div class="title">{{item.name}}</div>
       </div>
+      <div (click)="state.openFeedback()">
+        <div class="index">✐</div>
+        <div class="title">Feedback</div>
+      </div>
     </div>
-    <div class="codelab-milestone">
+
+
+    <div class="codelab-milestone" *ngIf="config.page === 'milestone'">
       <app-milestone [config]="config.milestones[config.selectedMilestoneIndex]" [name]="config.name"></app-milestone>
+    </div>
+    <div class="codelab-milestone" *ngIf="config.page === 'feedback'">
+      I should seriously consider using router for this.
+      <ul>
+        <li>Authentificate using google auth.</li>
+        <li>Make sure only certain users can reed the feedback</li>
+        <li>Actually display all feedbacks</li>
+        <li>Have each feedback a button to open a new window with the appropriate state.</li>
+      </ul>
     </div>
 
   </div>
