--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -1,11 +1,12 @@
 <div class="editors">
   <div *ngFor="let file of visibleFiles" class="editor">
     <div class="filename" (click)="toggleFile(file)">
-      <span *ngIf="file.collapsed">▷</span>
-      <span *ngIf="!file.collapsed">▽</span>
+      <span *ngIf="file.collapsed" class = "arrow">▷</span>
+      <span *ngIf="!file.collapsed"  class = "arrow">▽</span>
       {{file.filename}} {{file.readonly?' (this file is read only) ': ''}}
     </div>
     <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange.emit({file: file, code: $event})">
     </app-editor>
   </div>
 </div>
+
