ngModel in feedback widget

--- a/src/app/feedback-widget/feedback-widget.component.html
+++ b/src/app/feedback-widget/feedback-widget.component.html
@@ -1,4 +1,6 @@
 <h2>Give us some feedback!</h2>
-<div><input type="text" #usernameInput placeholder="Enter your name" required [value]="username"/></div>
-<div><textarea #feedbackInput placeholder="Describe your issue or share your ideas" required></textarea> </div>
-<div><button (click)="send(feedbackInput.value, usernameInput.value)">Send</button></div>
+<form #f="ngForm">
+    <div><input type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" placeholder="Enter your name" name="name"/></div>
+    <div><textarea [(ngModel)]="comment" placeholder="Describe your issue or share your ideas" name="comment"></textarea> </div>
+    <div><button (click)="send()" id="submit">Send</button></div>
+</form>
