--- a/src/app/feedback-widget/feedback-widget.component.css
+++ b/src/app/feedback-widget/feedback-widget.component.css
@@ -1,26 +1,31 @@
-textarea{
-    margin:10px 0;
+textarea {
+  margin: 10px 0;
+  height: 100px;
 }
-input, textarea{
-    font-size:20px;
-    border-radius:3px;
-    padding:10px;
-    border:1px solid #2ecc71;
-    color: #2c3e50;
-    font-family: Arial;
-    width:100%;
+
+input, textarea {
+  width: 100%;
+  border: 1px #ddd solid;
+  padding: 4px;
 }
-h2{
-    color:#3498db;
-    font-size: 24px;
+
+button {
+  color: #fff;
+  background: #3e8e01;
+  display: inline-block;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+  border-radius: 3px;
+  line-height: 25px;
+  white-space: nowrap;
+  text-align: center;
+  text-decoration: none;
+  border: 0 solid;
+
+
 }
-#submit{
-    padding: 10px;
-    font-size:20px;
-    width:100px;
-    background:#2ECC71;
-    border:solid 1px white;
-    border-radius:6px;
-    color:white;
-    font-family: Arial;
+
+form {
+  display: block;
+  margin-top: 10px;
 }
