--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -7,6 +7,7 @@
                (onCodeChange)="onCodeChange($event)"
                (onFileCollapsed)="onFileCollapsed($event)"></app-editors>
   <div class="side">
+    <autorun-control></autorun-control>
     <div class="description" [innerHTML]="config.description"></div>
     <app-tests [tests]="config.tests"></app-tests>
     <app-runner [files]="config.editedFiles" style="flex: 50%"></app-runner>
