- set auton to be false on init

--- a/src/app/exercise/autoruncontrol.component.html
+++ b/src/app/exercise/autoruncontrol.component.html
@@ -4,13 +4,18 @@
     color: blue;
 }
 </style> -->
+<h6 (click)="state.toggleAutorun()"> auto run controller </h6>
 <button 
 		type="submit" 
 		[ngClass]="{'autorun-on': config.autorun, 'autorun-off': !config.autorun}" 
 		[disabled]="config.autorun">Run
 </button>
 <label>
-    <input type="checkbox" name="isAutorun"  [(ngModel)]="config.autorun">
+    <input 
+    	type="checkbox" 
+    	name="isAutorun" 
+    	(click)="state.toggleAutorun()" 
+    	[(ngModel)]="config.autorun">
     <span *ngIf="config.autorun"> automatically run as you type code (might be slow)</span>
     <span *ngIf="!config.autorun"> click run to execute</span>
 </label>
