--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -3,11 +3,14 @@
   {{config.messageNext || 'Good job! Go to the next exercise!'}}
 </div>
 <div class="exercise-panel" *ngIf="config?.editedFiles?.length">
+<!-- momo -->
   <app-editors [files]="config.editedFiles"
                (onCodeChange)="onCodeChange($event)"
-               (onFileCollapsed)="onFileCollapsed($event)"></app-editors>
+               (onAutorunChange)="onAutorunChange($event)" 
+               (onFileCollapsed)="onFileCollapsed($event)">
+  </app-editors>
   <div class="side">
-    <autorun-control></autorun-control>
+    <autorun-control (onAutorunChange)=onAutorunChange($event)></autorun-control>
     <div class="description" [innerHTML]="config.description"></div>
     <app-tests [tests]="config.tests"></app-tests>
     <app-runner [files]="config.editedFiles" style="flex: 50%"></app-runner>
