- prepped to intercept auto run changes at exercise level

--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -8,8 +8,7 @@
     <!-- momo -->
     <app-editor 
     	[file]="file" *ngIf="!file.collapsed" 
-    	(onCodeChange)="onCodeChange.emit({file: file, code: $event})"
-    	(onAutorunChange)="onAutorunChange.emit({file: file, code: $event})">
+    	(onCodeChange)="onCodeChange.emit({file: file, code: $event})">
     </app-editor>
   </div>
 </div>
