--- a/src/app/exercise/autoruncontrol.component.html
+++ b/src/app/exercise/autoruncontrol.component.html
@@ -1,21 +1,4 @@
-<!-- momo -->
-<!-- <h6 (click)="state.toggleAutorun()"> auto run controller </h6>
-<button 
-		type="submit" 
-		[ngClass]="{'autorun-on': config.autorun, 'autorun-off': !config.autorun}" 
-		[disabled]="config.autorun">Run
-</button>
-<label>
-    <input 
-    	type="checkbox" 
-    	name="isAutorun" 
-    	(click)="state.toggleAutorun()" 
-    	[(ngModel)]="config.autorun">
-    <span *ngIf="config.autorun"> auto run as you type code (might be slow)</span>
-    <span *ngIf="!config.autorun"> click run to execute (auto run is OFF)</span>
-</label>
-
-<hr class="autorun-linebreak"> -->
+<!-- momo new html template -->
 
 <button 
         type="submit" 
@@ -23,14 +6,16 @@
         [disabled]="config.autorun"
         (click)="run()">Run
 </button>
+<span *ngIf="!config.autorun"> click run to execute. (autorun</span>
+<span *ngIf="config.autorun"> (auto running</span>
 <label>
     <input 
         type="checkbox" 
         name="isAutorun" 
         [(ngModel)]="config.autorun"
         (click)="toggleAutorun(config.autorun)">
-    <span *ngIf="config.autorun"> auto run as you type code (might be slow)</span>
-    <span *ngIf="!config.autorun"> click run to execute (auto run is OFF)</span>
+    <span>)</span>
+    
 </label>
 
 <hr class="autorun-linebreak">
