--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -1,11 +1,14 @@
 <div class="editors">
   <div *ngFor="let file of visibleFiles" class="editor">
+    <div *ngIf="file.solution" (click)="loadSolution(file)" style="float: right">
+      [load solution]
+    </div>
     <div class="filename" (click)="toggleFile(file)">
       <span *ngIf="file.collapsed" class="arrow">▷</span>
       <span *ngIf="!file.collapsed" class="arrow">▽</span>
       {{file.filename}} {{file.readonly?' (this file is read only) ': ''}}
     </div>
-    <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange.emit({file: file, code: $event})">
+    <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange({file: file, code: $event})">
     </app-editor>
   </div>
 </div>
