--- a/src/app/milestone/milestone.component.html
+++ b/src/app/milestone/milestone.component.html
@@ -4,7 +4,7 @@
     <div class="milestone-title exercise">{{config.name}}</div>
 
     <div *ngFor="let item of config.exercises; let i = index"
-         class="exercise {{config.selectedExerciseIndex === i ? 'selected' : ''}} {{exerciseComplete(item) ? 'complete' : ''}}"
+         class="exercise {{config.selectedExerciseIndex === i ? 'selected' : ''}}"
          (click)="state.selectExercise(i)"
     >
       {{item.name}}
