--- a/src/app/codelab/codelab.component.html
+++ b/src/app/codelab/codelab.component.html
@@ -12,10 +12,10 @@
         <div class="index">{{i + 1}}</div>
         <div class="title">{{item.name}}</div>
       </div>
-      <div (click)="state.openFeedback()">
+      <!--<div (click)="state.openFeedback()">
         <div class="index">✐</div>
         <div class="title">Feedback</div>
-      </div>
+      </div>-->
     </div>
 
 
