--- a/src/app/tests/tests.component.css
+++ b/src/app/tests/tests.component.css
@@ -16,6 +16,14 @@
   background-color: #ff4d44;
 }
 
+.china-mode .test.pass:before {
+  background-color: #ff4d44;
+}
+
+.china-mode .test.fail:before {
+  background-color: #aaff30;
+}
+
 .checklist {
   padding: 10px;
 }
