Change the colors

--- a/src/app/milestone/milestone.component.css
+++ b/src/app/milestone/milestone.component.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .exercise.codelab-title {
-  background: #f90;
+  background: #5ccb5d;
   color: #fff;
   font-weight: 400;
   font-size: 20px;
