--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -1,20 +1,17 @@
-<div
-  #editors
-  class="editors"
-  [ngStyle]="{'width': editorsWidth + 'px'}">
-  <div *ngFor="let file of visibleFiles" class="editor">
-    <div *ngIf="debug && file.solution" (click)="loadSolution(file)" style="float: right">
-      [load solution]
+<app-resize>
+  <div class="editors">
+    <div *ngFor="let file of visibleFiles" class="editor">
+      <div *ngIf="debug && file.solution" (click)="loadSolution(file)" style="float: right">
+        [load solution]
+      </div>
+      <div class="filename" (click)="toggleFile(file)">
+        <span *ngIf="file.collapsed" class="arrow">▷</span>
+        <span *ngIf="!file.collapsed" class="arrow">▽</span>
+        {{file.filename}} {{file.readonly?' (this file is read only) ': ''}}
+      </div>
+      <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange({file: file, code: $event})">
+      </app-editor>
     </div>
-    <div class="filename" (click)="toggleFile(file)">
-      <span *ngIf="file.collapsed" class="arrow">▷</span>
-      <span *ngIf="!file.collapsed" class="arrow">▽</span>
-      {{file.filename}} {{file.readonly?' (this file is read only) ': ''}}
-    </div>
-    <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange({file: file, code: $event})">
-    </app-editor>
   </div>
-
-  <app-resize [(width)]="editorsWidth"></app-resize>
-</div>
+</app-resize>
 
