--- a/src/app/resize/resize.component.html
+++ b/src/app/resize/resize.component.html
@@ -1,7 +1,14 @@
-<div [class.overlay]="isMouseDown"></div>
-<div class="spacer">
-	<div
-		class="handle"
-		[class.is-expanded]="isMouseDown">
+<div
+	class="resize"
+	[ngStyle]="{'width': width + 'px'}">
+
+	<ng-content></ng-content>
+
+	<div [class.overlay]="isMouseDown"></div>
+	<div class="spacer">
+		<div
+			class="handle"
+			[class.is-expanded]="isMouseDown">
+		</div>
 	</div>
 </div>
