--- a/src/app/tests/tests.component.css
+++ b/src/app/tests/tests.component.css
@@ -5,7 +5,7 @@
   display: inline-block;
   background-color: #dddddd;
   content: "";
-  margin-right: 4px;
+  margin-right: 8px;
 }
 
 .test.pass {
@@ -28,4 +28,8 @@
   font-size: 70%;
   color: #444;
   padding-left: 20px;
+}
+
+.test-panel {
+  margin-top: 8px;
 }
