--- a/src/app/tests/tests.component.html
+++ b/src/app/tests/tests.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let test of tests">
+<div *ngFor="let test of tests" class="test-panel" title="{{test.result}}">
   <div [class]="'test ' + (test.pass === true ?'pass': (test.pass === false ?'fail': ''))">{{test.title}}</div>
-  <div class="result">{{test.result}}</div>
+  <div class="result" *ngIf="isFirstUnsolved(test)">{{test.result}}</div>
 </div>
