Minor resize component clean up Only resize when the handle is clicked Add minimum width

--- a/src/app/resize/resize.component.html
+++ b/src/app/resize/resize.component.html
@@ -8,7 +8,7 @@
 	<div class="spacer">
 		<div
 			class="handle"
-			[class.is-expanded]="isMouseDown">
+			[class.is-dragged]="isMouseDown">
 		</div>
 	</div>
 </div>
