resize component related revisions

--- a/src/app/resize/resize.component.html
+++ b/src/app/resize/resize.component.html
@@ -6,9 +6,6 @@
 
 	<div [class.overlay]="isMouseDown"></div>
 	<div class="spacer">
-		<div
-			class="handle"
-			[class.is-expanded]="isMouseDown">
-		</div>
+		<div class="handle"></div>
 	</div>
 </div>
