--- a/src/app/editors/editors.component.html
+++ b/src/app/editors/editors.component.html
@@ -8,7 +8,7 @@
         <span *ngIf="file.collapsed" class="arrow">▷</span>
         <span *ngIf="!file.collapsed" class="arrow">▽</span>
         <span class="file-{{file.type}} file">{{file.type.substr(0,2)}}</span>
-        {{file.filename}} {{file.readonly?' (this file is read only) ': ''}}
+        {{file.path}} {{file.readonly?' (this file is read only) ': ''}}
       </div>
       <app-editor [file]="file" *ngIf="!file.collapsed" (onCodeChange)="onCodeChange({file: file, code: $event})">
       </app-editor>
