--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -6,7 +6,7 @@
   <app-editors [files]="config.editedFiles"
                (onFileCollapsed)="onFileCollapsed($event)"></app-editors>
   <div class="side">
-    <autorun-control (onAutorunChange)=onAutorunChange($event)></autorun-control>
+    <app-autorun (onAutorunChange)=onAutorunChange($event)></app-autorun>
     <div class="description" [innerHTML]="sanitizedDescription"></div>
     <app-tests [tests]="config.tests"></app-tests>
     <app-runner [files]="config.editedFiles" style="flex: 50%"></app-runner>
