--- a/src/app/exercise/exercise.component.html
+++ b/src/app/exercise/exercise.component.html
@@ -10,7 +10,7 @@
     <app-autorun (onAutorunChange)=onAutorunChange($event)></app-autorun>
     <div class="description" [innerHTML]="sanitizedDescription"></div>
     <app-tests [tests]="config.tests"></app-tests>
-    <app-runner [files]="config.files" style="flex: 50%"></app-runner>
+    <app-runner [files]="config.files" style="flex: 50%" [runnerType]="config.runner || 'default'"></app-runner>
     <app-feedback-widget *ngIf="state.appConfig.feedbackEnabled"></app-feedback-widget>
   </div>
 </div>
