--- a/src/app/autorun/autorun.component.html
+++ b/src/app/autorun/autorun.component.html
@@ -1,17 +1,17 @@
-<div class = "autorun">
-  <label>
-  <span>Autorun</span>
-  <input
-    type="checkbox"
-    name="isAutorun"
-    [(ngModel)]="autorun"
-    (click)="toggleAutorun(autorun)">
-</label>
+<div class="autorun">
+  <button
+    type="submit"
+    class="autorun"
+    *ngIf="!autorun"
+    (click)="run()">Run
+  </button>
 
-<button
-  type="submit"
-  [class.autorun]="autorun"
-  *ngIf="!autorun"
-  (click)="run()">Run the code
-</button>
+  <label>
+    <span>Autorun</span>
+    <input
+      type="checkbox"
+      name="isAutorun"
+      [(ngModel)]="autorun"
+      (click)="toggleAutorun(autorun)">
+  </label>
 </div>
