--- a/src/app/autorun/autorun.component.css
+++ b/src/app/autorun/autorun.component.css
@@ -1,5 +1,5 @@
 .autorun.running button {
-  background: url(assets/images/heart.gif) no-repeat 2px;
+  background: url(../../assets/images/heart.gif) no-repeat 2px;
   background-color: #dddddd;
   color: #bbb;
   border: 1px solid #999;
