Add a simple UXI Codelab and basic styles for the presentation mode

--- a/src/app/presentation/presentation/presentation.component.html
+++ b/src/app/presentation/presentation/presentation.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wrapper">
   <app-presentation-editor [files]="exercise.files"></app-presentation-editor>
   <app-runner [files]="exercise.files" style="flex: 50%" [runnerType]="exercise.runner || 'default'"></app-runner>
 </div>
