--- a/src/app/presentation/presentation-editor/presentation-editor.component.css
+++ b/src/app/presentation/presentation-editor/presentation-editor.component.css
@@ -1,9 +1,20 @@
 .tabs {
   display: flex;
+  background: #000000;
+}
+
+.tab.selected {
+  background: #fff;
+  color: #000000;
+  font-size: 24px;
 }
 
 .tab {
+  line-height: 30px;
+  border-right: 1px #999 solid;
+  color: #fff;
   padding: 10px;
 }
+
 
 
