fixes navbar highlight

--- a/src/app/codelab/codelab/codelab.component.html
+++ b/src/app/codelab/codelab/codelab.component.html
@@ -8,7 +8,7 @@
         {{collapsePanel ? '▶': '◀'}}
       </div>
       <div
-        routerLink="../../{{i}}/0"
+        routerLink="../../{{i}}"
         routerLinkActive="selected"
         class="milestone"
         *ngFor="let item of config.codelab.milestones; let i = index;">
