Fix issues with template typing. These were blocking `ng build --prod --aot`.

--- a/src/app/feedback-page/feedback-page.component.html
+++ b/src/app/feedback-page/feedback-page.component.html
@@ -6,7 +6,7 @@
     <th>Exercise #</th>
     <th></th>
   </tr>
-  <tr *ngFor="let feedbackItem of feedbackList | async">
+  <!--<tr *ngFor="let feedbackItem of feedbackList | async">
     <td>{{feedbackItem.name}}</td>
     <td>{{feedbackItem.comment}}</td>
     <td>{{feedbackItem.state.selectedMilestoneIndex + 1}}</td>
@@ -14,7 +14,7 @@
     <td>
       <button (click)="simulate(feedbackItem.state)">Simulate</button>
     </td>
-  </tr>
+  </tr>-->
 </table>
 
 <ul>
