--- a/src/app/codelab/autorun/autorun.component.html
+++ b/src/app/codelab/autorun/autorun.component.html
@@ -11,7 +11,7 @@
       type="checkbox"
       name="isAutorun"
       [(ngModel)]="autorun"
-      (click)="toggleAutorun(autorun)">
+      (click)="toggleAutorun()">
   </label>
   <span class = "stop" (click)="endRun()">(Running, click to stop)</span>
 </div>
